Rebrand project from BecauseImStuck to Purp
- Renamed project folder from becauseImstuck to purp
- Updated all references to becauseimstuck/BecauseImStuck/becauseImstuck to purp/Purp
- Renamed database from becauseimstuck.db to purp.db in all config files
- Updated all HTML templates with new branding
- Updated README and all documentation files
- Updated Docker configuration and compose files
- Updated infrastructure templates (Ansible, Terraform)
- Renamed systemd service template from becauseimstuck.service.j2 to purp.service.j2
- Updated all deployment scripts and workflows

--- a/templates/auth/confirm_reps.html
+++ b/templates/auth/confirm_reps.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Confirm My Representatives - BecauseImStuck{% endblock %}
+{% block title %}Confirm My Representatives - Purp{% endblock %}
 
 {% block additional_styles %}
   .address-card {
