--- a/templates/bill_detail.html
+++ b/templates/bill_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Bill Detail - BecauseImStuck{% endblock %}
+{% block title %}Bill Detail - Purp{% endblock %}
 
 {% block additional_styles %}
   .bill-detail-card {
