--- a/templates/bills.html
+++ b/templates/bills.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Bills - BecauseImStuck{% endblock %}
+{% block title %}Bills - Purp{% endblock %}
 
 {% block additional_styles %}
   .bill-card {
