--- a/templates/events/cart.html
+++ b/templates/events/cart.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Shopping Cart - {{ event.title }} - BecauseImStuck{% endblock %}
+{% block title %}Shopping Cart - {{ event.title }} - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
