--- a/templates/events/create.html
+++ b/templates/events/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Create Event - BecauseImStuck{% endblock %}
+{% block title %}Create Event - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
