--- a/templates/events/edit_template_options.html
+++ b/templates/events/edit_template_options.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ template.name }} Options - BecauseImStuck{% endblock %}
+{% block title %}{{ template.name }} Options - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
