--- a/templates/events/my_invitations.html
+++ b/templates/events/my_invitations.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}My Event Invitations - BecauseImStuck{% endblock %}
+{% block title %}My Event Invitations - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
