--- a/templates/events/view.html
+++ b/templates/events/view.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ event.title }} - BecauseImStuck{% endblock %}
+{% block title %}{{ event.title }} - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
