--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home - BecauseImStuck{% endblock %}
+{% block title %}Home - Purp{% endblock %}
 
 {% block content %}
   <div class="row">
