--- a/templates/messages/compose.html
+++ b/templates/messages/compose.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Compose Message - BecauseImStuck{% endblock %}
+{% block title %}Compose Message - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
