--- a/templates/messages/inbox.html
+++ b/templates/messages/inbox.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}My Messages - BecauseImStuck{% endblock %}
+{% block title %}My Messages - Purp{% endblock %}
 
 {% block content %}
   <div class="d-flex justify-content-between align-items-center mb-4">
