--- a/templates/messages/view.html
+++ b/templates/messages/view.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ message.subject }} - BecauseImStuck{% endblock %}
+{% block title %}{{ message.subject }} - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
