--- a/templates/power.html
+++ b/templates/power.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Power Portal - BecauseImStuck{% endblock %}
+{% block title %}Power Portal - Purp{% endblock %}
 
 {% block content %}
   <h1>Power User Portal</h1>
