--- a/templates/reps.html
+++ b/templates/reps.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Representatives - BecauseImStuck{% endblock %}
+{% block title %}Representatives - Purp{% endblock %}
 
 {% block additional_styles %}
   .rep-card {
