--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign Up - BecauseImStuck{% endblock %}
+{% block title %}Sign Up - Purp{% endblock %}
 
 {% block content %}
   <div class="row justify-content-center">
