--- a/templates/events/edit.html
+++ b/templates/events/edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Event - BecauseImStuck{% endblock %}
+{% block title %}Edit Event - Purp{% endblock %}
 
 {% block content %}
   <div class="mb-4">
