--- a/templates/events/templates.html
+++ b/templates/events/templates.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Event Templates - BecauseImStuck{% endblock %}
+{% block title %}Event Templates - Purp{% endblock %}
 
 {% block content %}
   <div class="d-flex justify-content-between align-items-center mb-4">
