--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Login - BecauseImStuck{% endblock %}
+{% block title %}Login - Purp{% endblock %}
 
 {% block content %}
   <div class="row justify-content-center">
