--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Profile - BecauseImStuck{% endblock %}
+{% block title %}Edit Profile - Purp{% endblock %}
 
 {% block content %}
   <div class="row justify-content-center">
