--- a/templates/rep_detail.html
+++ b/templates/rep_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Representative - BecauseImStuck{% endblock %}
+{% block title %}Representative - Purp{% endblock %}
 
 {% block content %}
   {% if rep %}
